Final-mock/fixed-project

--- a/fm/src/app/Admin-Timesheet/admin-time-tracking/admin-time-tracking.component.html
+++ b/fm/src/app/Admin-Timesheet/admin-time-tracking/admin-time-tracking.component.html
@@ -14,7 +14,7 @@
     </thead>
     <tbody>
       <tr *ngFor="let entry of timesheetSummary">
-        <td>{{name}}</td>
+        <td>{{entry.employeeName || name }}</td>
         <td>{{ entry.project }}</td>
         <td>{{ entry.location }}</td>
         <td>{{ entry.hrsType }}</td>
