--- a/fm/src/app/form-view/form-view.component.html
+++ b/fm/src/app/form-view/form-view.component.html
@@ -44,9 +44,9 @@
         <label for="status">Status:</label>
         <select id="status" name="status" ngModel [(ngModel)]="filterCriteria.status">
           <option value="">Select Status</option>
-          <option value="Completed">Completed</option>
-          <option value="In Progress">In Progress</option>
-          <option value="Not Started">Not Started</option>
+          <option value="Completed">Active</option>
+          <option value="In Progress">In Active</option>
+          <!-- <option value="Not Started">Not Started</option> -->
         </select>
       </div>
       <div class="form-buttons">
