--- a/fm/src/app/overview/overview.component.html
+++ b/fm/src/app/overview/overview.component.html
@@ -7,13 +7,13 @@
         
         <!-- Avatar -->
         <div class="avatar-circle">
-          <span class="initials">A</span>
+          <span class="initials">KJ</span>
         </div>
 
       </div>
 
       <div class="profile-detail text-center pb-3">
-        <h5>Arul Subaramaniyam</h5>
+        <h5>Kumarakrishnan Joshua</h5>
         <h6 class="text-muted">CEO</h6>
       </div>
     </div>
