--- a/fm/src/app/team-list/team-list.component.scss
+++ b/fm/src/app/team-list/team-list.component.scss
@@ -77,16 +77,17 @@ tbody tr:hover {
 
 .view-btn {
   padding: 6px 12px;
-  background-color: white;
+  background-color: #007bff;
   border: none;
-  color: black;
+  color: white;
   border-radius: 5px;
   cursor: pointer;
   transition: 0.3s;
 }
 
 .view-btn:hover {
-  background-color: #007bff;
+  background-color: white;
+  color: #007bff;
 }
 
 /* FOOTER */
