--- a/fm/src/app/team-project/team-project.component.html
+++ b/fm/src/app/team-project/team-project.component.html
@@ -18,12 +18,28 @@
       <th>Project Name</th>
       <th>Client Name</th>
       <th>Domain</th>
-      <th>Status</th>
+      <th>startDate</th>
+      <th>voice</th>
+      <th>voicestartDate</th>
+      <th>voiceendDate</th>
+      <th>coding</th>
+      <th>codingstartDate</th>
+      <th>codingendDate</th>
+      <th>Assets</th>
+      <th>Project Status</th>
     </tr>
     <tr *ngFor="let item of submittedData">
       <td>{{ item.projectname }}</td>
       <td>{{ item.clientname }}</td>
       <td>{{ item.domain }}</td>
+      <td>{{ item.startDate }}</td>
+      <td>{{ item.voice }}</td>
+      <td>{{ item.voicestartDate }}</td>
+      <td>{{ item.voiceendDate || '-' }}</td>
+      <td>{{ item.coding }}</td>
+      <td>{{ item.codingstartDate }}</td>
+      <td>{{ item.codingendDate || '-' }}</td>
+      <td>{{ item.assets.join(', ') || '-' }}</td>
       <td>{{item.projectStatus}}</td>
 <td class="position-relative">
   <button class="btn btn-link p-0" (click)="toggleDropdown(item)">
