--- a/fm/src/app/overview/overview.component.html
+++ b/fm/src/app/overview/overview.component.html
@@ -68,7 +68,7 @@
 
       <!-- New Joinees -->
       <div class="col-lg-4 col-md-6 col-sm-6 mb-3">
-        <div class="card stat-card h-100">
+        <div class="card stat-card h-100" (click)="openNewJoineesCard()">
           <div class="card-body">
             <h6>New Joinees This Month</h6>
             <h2>{{ newJoinees }}</h2>
@@ -108,7 +108,7 @@
 
       <!-- Birthday Count -->
       <div class="col-lg-4 col-md-6 col-sm-6 mb-3">
-        <div class="card stat-card h-100">
+        <div class="card stat-card h-100"  (click)="openBirthdayCard()">
           <div class="card-body">
             <h6>Birthdays Today</h6>
             <h2>{{ birthdayCount }}</h2>
